force-app/main/default/objects/Archive_Job_Log__b/Archive_Job_Log__b.object-meta.xml
<CustomObject>
    <description>Immutable operational audit log for archive, restore, flush, and export jobs.</description>
    <label>Archive Job Log</label>
    <pluralLabel>Archive Job Logs</pluralLabel>
</CustomObject>