force-app/main/default/objects/Archive_Job_Log__b/fields/AsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncJobId__c</fullName>
    <label>Async Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>