force-app/main/default/objects/Archive_Job_Log__b/fields/ConfigName__c.field-meta.xml
<CustomField>
    <fullName>ConfigName__c</fullName>
    <label>Config Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>