force-app/main/default/objects/Archive_Job_Log__b/fields/ErrorSummary__c.field-meta.xml
<CustomField>
    <fullName>ErrorSummary__c</fullName>
    <label>Error Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>