force-app/main/default/objects/Archive_Job_Log__b/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <label>Job Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>