force-app/main/default/objects/Archive_Job_Log__b/fields/RecordsFailed__c.field-meta.xml
<CustomField>
    <fullName>RecordsFailed__c</fullName>
    <label>Records Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>