force-app/main/default/objects/Archive_Job_Log__b/fields/RecordsProcessed__c.field-meta.xml
<CustomField>
    <fullName>RecordsProcessed__c</fullName>
    <label>Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>