force-app/main/default/objects/Archive_Job_Log__b/fields/RunDateTime__c.field-meta.xml
<CustomField>
    <fullName>RunDateTime__c</fullName>
    <label>Run Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>